2002-05-10  Rainer Keuchel  <keuchel@netwave.de>

	* all: XCEGetOpenFileName/XCEGetSaveFileName were not in the
	WCE200 builds, because they were defined-out in the header. Why?

2002-04-28  Rainer Keuchel  <keuchel@netwave.de>

	* cewin32.c (XCECreateWindowExA): Classname can be atom.

2002-04-26  Rainer Keuchel  <keuchel@netwave.de>

	* cewin32.c (XCEGetTempFileNameA): Fixed. The old impl did not
	follow the spec.
	(XCElstrcpynA): Added.

	* ceio.c (_init_io): Added CELIBSTDLOGDIR as dir for the std
	stream files.

2002-04-25  Rainer Keuchel  <keuchel@netwave.de>

	* All: Version 3.10 released.

2002-04-24  Rainer Keuchel  <keuchel@netwave.de>
	* cewin32.c: Some more functions for VIM and some missing macros
	added. 
	
2002-04-04  Rainer Keuchel  <keuchel@netwave.de>

	* cedebug.c (XCETrace): Flush file buffers.

2002-03-31  Rainer Keuchel  <keuchel@netwave.de>

	* cewin32.c (XCESendMessageA): Fixed severe bug when
	WM_GETTEXT. Was never received correctly!!!! Added new messages.
	Added some new functions.
	
2002-03-15  Rainer Keuchel  <keuchel@netwave.de>

	* cestdlib.c (xcemktemp): Fixed overflow...

2002-02-23  Rainer Keuchel  <keuchel@netwave.de>

	* wssocket.c (xceselect): Handle pipes.

	* ceshared2.c (XCEPeekNamedPipe): Return error when pipe is closed.

	* cestdlib.c (xceexit): Call close_all_fds() so pipes get closed.

	* ceio.c (close_all_fds): Added. Closes pipes.

2002-02-15  Rainer Keuchel  <keuchel@netwave.de>

	* registry.c: Some fixes suggested by W. Garland.

	* strftime.c: Added. From newlib.

2002-02-10  Rainer Keuchel  <keuchel@netwave.de>

	* wssocket.c (xceselect): Added yield of non WM_KEYDOWN
	messages. Possible conflict with other soft????

	* wssocket.c (xceselect): Fixed latent bug. Showed in ssh when
	used with the -L option...

	* ceio.c (xcefcntl): Set O_NONBLOCK if FIONBIO.

	* wssocket.c (xceioctlsocket): Set O_NONBLOCK in flags if FIONBIO.

	* ceio.c (xcefcntl): Added flags to fdent_t.
